# try_tide

./: Cargo.toml  Makefile
src/: macros.rs  main.rs
src/db/: postgres.rs
src/handlers/: hello_handler.rs  user_handler.rs
src/models/: claims.rs  mod.rs  payload.rs  user.rs
src/repositories/: user_repo.rs
src/routes/: mod.rs  router.rs  user_routes.rs
