[package]
name = "try_tide"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-async-std", "postgres" ] }
serde_json = "1.0.129"
bcrypt = "0.15"
jsonwebtoken = "9"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
